# mixmicro-rpc

./: .gitignore  Cargo.toml  README.md  build.rs  go.mod
proto/: fastjob.proto  pingpong.proto  worker.proto
src/: lib.rs  main.rs
