[package]
name = "tower-reactor"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
hyper = { version = "0.14.4", features = ["full"] }
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
tower = { version = "0.4.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3.0"
lazy_static = "1.4.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["gzip"] }
