[package]
name = "fastjob-proto"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["protobuf-codec", "use-bindgen"]
protobuf-codec = ["grpcio/protobuf-codec", "protobuf-build/grpcio-protobuf-codec"]
prost-codec = ["prost-derive", "prost-types", "bytes", "lazy_static", "grpcio/prost-codec", "prost", "protobuf-build/grpcio-prost-codec"]
use-bindgen = ["grpcio/use-bindgen"]

[dependencies]
futures = "0.3"
grpcio = { features = ["secure"], version = "0.8.0", default-features = false }
bytes = { version = "1.0", optional = true }
prost = { version = "0.7", optional = true }
prost-derive = { version = "0.7", optional = true }
prost-types = { version = "0.7", optional = true }
protobuf = "2"
lazy_static = { version = "1.3", optional = true }

[build-dependencies]
protobuf-build = { version = "0.12", default-features = false }
walkdir = "2.2"
